--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -21,6 +21,7 @@
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
   --bs-fire: #ff3e00;
+  --bs-mist: #dee2e6;
   --bs-tertiary: #dee2e6;
   --bs-gray-100: #f8f9fa;
   --bs-gray-200: #e9ecef;
@@ -40,6 +41,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-fire: #ff3e00;
+  --bs-mist: #dee2e6;
   --bs-tertiary: #dee2e6;
   --bs-primary-rgb: 255, 62, 0;
   --bs-secondary-rgb: 108, 117, 125;
@@ -50,6 +52,7 @@
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-fire-rgb: 255, 62, 0;
+  --bs-mist-rgb: 222, 226, 230;
   --bs-tertiary-rgb: 222, 226, 230;
   --bs-primary-text-emphasis: #661900;
   --bs-secondary-text-emphasis: #2b2f32;
@@ -2551,6 +2554,23 @@ progress {
   --bs-btn-disabled-border-color: #ff3e00;
 }
 
+.btn-mist {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #dee2e6;
+  --bs-btn-border-color: #dee2e6;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #e3e6ea;
+  --bs-btn-hover-border-color: #e1e5e9;
+  --bs-btn-focus-shadow-rgb: 189, 192, 196;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #e5e8eb;
+  --bs-btn-active-border-color: #e1e5e9;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #dee2e6;
+  --bs-btn-disabled-border-color: #dee2e6;
+}
+
 .btn-tertiary {
   --bs-btn-color: #000;
   --bs-btn-bg: #dee2e6;
@@ -2718,6 +2738,23 @@ progress {
   --bs-btn-disabled-color: #ff3e00;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #ff3e00;
+  --bs-gradient: none;
+}
+
+.btn-outline-mist {
+  --bs-btn-color: #dee2e6;
+  --bs-btn-border-color: #dee2e6;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #dee2e6;
+  --bs-btn-hover-border-color: #dee2e6;
+  --bs-btn-focus-shadow-rgb: 222, 226, 230;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #dee2e6;
+  --bs-btn-active-border-color: #dee2e6;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #dee2e6;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #dee2e6;
   --bs-gradient: none;
 }
 
@@ -4594,6 +4631,19 @@ progress {
   --bs-list-group-active-border-color: var(--bs-fire-text-emphasis);
 }
 
+.list-group-item-mist {
+  --bs-list-group-color: var(--bs-mist-text-emphasis);
+  --bs-list-group-bg: var(--bs-mist-bg-subtle);
+  --bs-list-group-border-color: var(--bs-mist-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-mist-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-mist-border-subtle);
+  --bs-list-group-active-color: var(--bs-mist-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-mist-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-mist-text-emphasis);
+}
+
 .list-group-item-tertiary {
   --bs-list-group-color: var(--bs-tertiary-text-emphasis);
   --bs-list-group-bg: var(--bs-tertiary-bg-subtle);
@@ -6361,6 +6411,11 @@ progress {
   background-color: RGBA(var(--bs-fire-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-mist {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-mist-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-tertiary {
   color: #000 !important;
   background-color: RGBA(var(--bs-tertiary-rgb), var(--bs-bg-opacity, 1)) !important;
@@ -6445,6 +6500,15 @@ progress {
 .link-fire:hover, .link-fire:focus {
   color: RGBA(255, 101, 51, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(255, 101, 51, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-mist {
+  color: RGBA(var(--bs-mist-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-mist-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-mist:hover, .link-mist:focus {
+  color: RGBA(229, 232, 235, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(229, 232, 235, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-tertiary {
@@ -6931,6 +6995,10 @@ progress {
   --bs-focus-ring-color: rgba(var(--bs-fire-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-mist {
+  --bs-focus-ring-color: rgba(var(--bs-mist-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-tertiary {
   --bs-focus-ring-color: rgba(var(--bs-tertiary-rgb), var(--bs-focus-ring-opacity));
 }
@@ -7101,6 +7169,11 @@ progress {
 .border-fire {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-fire-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-mist {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-mist-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-tertiary {
@@ -8148,6 +8221,11 @@ progress {
   color: rgba(var(--bs-fire-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-mist {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-mist-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-tertiary {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-tertiary-rgb), var(--bs-text-opacity)) !important;
@@ -8360,6 +8438,11 @@ progress {
   text-decoration-color: rgba(var(--bs-fire-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-mist {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-mist-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-tertiary {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-tertiary-rgb), var(--bs-link-underline-opacity)) !important;
@@ -8461,6 +8544,11 @@ progress {
 .bg-fire {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-fire-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-mist {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-mist-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-tertiary {
@@ -12104,8 +12192,8 @@ main {
 h1, .h1 {
   color: #ff3e00;
   text-transform: uppercase;
-  font-size: 4rem;
-  font-weight: 100;
+  font-size: 2.5rem;
+  font-weight: 200;
 }
 
 @media (min-width: 640px) {
