--- a/app/src/scss/parts/_svelte.scss
+++ b/app/src/scss/parts/_svelte.scss
@@ -6,10 +6,10 @@ main {
   }
 
   h1 {
-    color: #ff3e00;
+    color: $fire;
     text-transform: uppercase;
-    font-size: 4rem;
-    font-weight: 100;
+    font-size: 2.5rem;
+    font-weight: 200;
   }
 
   @media (min-width: 640px) {
